# zfs-on-root

./: .copier-answers-py.yaml  .gitignore  .pre-commit-config.yaml  03-pool.sh  hatch.toml  inc-vars.sh  live-env-prep.sh  mise.toml  pyproject.toml  readme.md  ruff.toml  test-inc.sh  zor-config.ini  zor.py
archive/: 01-disk.sh  02-efi.sh  04-dataset.sh  05-install-os.sh
mise/tasks/: bootstrap  bump
requirements/: base.txt  dev.in  dev.txt
src/: tasks_lib.py
src/zor/: cli.py
